[package]
name = "nabla"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "nabla creates patch files by comparing command output with original files"
authors = ["taskie <t@skie.jp>"]
keywords = ["diff"]
readme = "README.md"
repository = "https://github.com/taskie/nabla"

[dependencies]
anyhow = "1.0.59"
clap = { version = "4.1.11", features = ["derive"] }
crossbeam-channel = "0.5.7"
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.17"
similar = { version = "2.2.0", features = ["bytes"] }

[dev-dependencies]
assert_cmd = "2.0.10"
