[package]
name = "nabla"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "nabla creates patch files by comparing command output with original files"
authors = ["taskie <t@skie.jp>"]
categories = ["command-line-utilities", "development-tools"]
keywords = ["diff", "patch", "cli", "sed", "parallel"]
readme = "README.md"
repository = "https://github.com/taskie/nabla"
homepage = "https://github.com/taskie/nabla"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.59", features = ["derive"] }
crossbeam-channel = "0.5.15"
env_logger = "0.11.9"
itertools = "0.14.0"
log = "0.4.29"
similar = { version = "2.7.0", features = ["bytes"] }

[dev-dependencies]
assert_cmd = "2.1.2"
